scripts/Reset-Restore-Gateway/default_rules.v4
# Generated by iptables-save v1.4.21 on Thu Dec  8 08:41:21 2016
*mangle
:PREROUTING ACCEPT [194:15632]
:INPUT ACCEPT [164:13338]
:FORWARD ACCEPT [2:104]
:OUTPUT ACCEPT [102:17916]
:POSTROUTING ACCEPT [107:19076]
COMMIT
# Completed on Thu Dec  8 08:41:21 2016
# Generated by iptables-save v1.4.21 on Thu Dec  8 08:41:21 2016
*nat
:PREROUTING ACCEPT [50:4107]
:INPUT ACCEPT [9:583]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
COMMIT
# Completed on Thu Dec  8 08:41:21 2016
# Generated by iptables-save v1.4.21 on Thu Dec  8 08:41:21 2016
*filter
:INPUT ACCEPT [20:5160]
:FORWARD ACCEPT [1:52]
:OUTPUT ACCEPT [0:0]
:RemoteManagement - [0:0]
:firewall_drop - [0:0]
:firewall_drop_log - [0:0]
:firewall_lan2lan - [0:0]
:firewall_lan2lan_accept_log - [0:0]
:firewall_lan2lan_drop_log - [0:0]
:firewall_lan2self - [0:0]
:firewall_lan2self_accept_log - [0:0]
:firewall_lan2self_drop_log - [0:0]
:firewall_lan2wan - [0:0]
:firewall_lan2wan_accept_log - [0:0]
:firewall_lan2wan_drop_log - [0:0]
:firewall_reject_log - [0:0]
:firewall_wan2lan - [0:0]
:firewall_wan2lan_accept_log - [0:0]
:firewall_wan2lan_drop_log - [0:0]
:firewall_wan2self - [0:0]
:firewall_wan2self_accept_log - [0:0]
:firewall_wan2self_drop_log - [0:0]
:general_forward - [0:0]
:general_output - [0:0]
:lan2wan_triggers - [0:0]
:remote_accept_wan2self - [0:0]
:remote_wan2lan_accept_log - [0:0]
:remote_wan2lan_drop_log - [0:0]
:wan2lan_trigger - [0:0]
:xlog_accept_lan2wan_triggers - [0:0]
:xlog_accept_wan2lan_triggers - [0:0]
-A INPUT -d 10.0.0.0/24 -j firewall_lan2wan_accept_log
-A INPUT -p tcp -m tcp --dport 113 -j firewall_reject_log
-A INPUT -d 192.168.2.0/27 -j firewall_wan2lan_accept_log
-A FORWARD -s 10.0.0.0/24 -j firewall_lan2wan_accept_log
-A FORWARD -s 192.168.2.0/27 -j firewall_wan2lan_accept_log
-A OUTPUT -s 10.0.0.0/24 -j firewall_lan2wan_accept_log
-A OUTPUT -s 192.168.2.0/27 -j firewall_wan2lan_accept_log
-A firewall_drop_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.DROP " --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_drop_log -j DROP
-A firewall_lan2lan_accept_log -j ACCEPT
-A firewall_lan2lan_drop_log -j DROP
-A firewall_lan2self_accept_log -j ACCEPT
-A firewall_lan2self_drop_log -j DROP
-A firewall_lan2wan_accept_log -j ACCEPT
-A firewall_lan2wan_drop_log -j DROP
-A firewall_reject_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.REJECT " --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_reject_log -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A firewall_reject_log -j DROP
-A firewall_wan2lan_accept_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.WAN2LAN ACC" --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_wan2lan_accept_log -j ACCEPT
-A firewall_wan2lan_drop_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.WAN2LAN DRO" --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_wan2lan_drop_log -j DROP
-A firewall_wan2self_accept_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.WAN2LAN ACC" --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_wan2self_accept_log -j ACCEPT
-A firewall_wan2self_drop_log -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "RDKB-EMULATOR: FW.WAN2LAN DRO" --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options
-A firewall_wan2self_drop_log -j DROP
COMMIT
# Completed on Thu Dec  8 08:41:21 2016
